--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         
     </style>
 </head>
-<body class="bg-linear-to-r from-cyan-500 bg-[#d1d68a]">
+<body class=" bg-[#f3bef3]">
     <header class="ml-35 mr-35 mb-5">
         <nav>
             <div class="flex justify-between items-center p-6 bg-[#ffffff] rounded-2xl mt-6">
@@ -33,7 +33,7 @@
                 <div class="flex gap-5 items-center">
                     <input type="checkbox" name="" id="">
                     <p id="nav-num" class="text-3xl font-bold mr-10">24</p>
-                    <img src="IMG/Group 8.png" alt="">
+                    <img class="cursor-pointer" id="random-color-btn" src="IMG/Group 8.png" alt="">
                 </div>
             </div>
         </nav>
@@ -51,7 +51,7 @@
                             <p class="text-2xl">0<span id="Task-num">6</span></p>
                         </div>
                     </div>
-                    <div id="new-today-btn" class="flex items-center gap-5 bg-linear-to-r from-cyan-500 bg-[#346] rounded-2xl w-72 text-white p-5">
+                    <div id="new-today-btn" class="flex items-center gap-5 bg-linear-to-r from-cyan-500 bg-[#346] rounded-2xl w-72 text-white p-5 cursor-pointer">
                         <img src="IMG/Group.png" alt="">
                         <div>
                             <p>Discover Something </p>
@@ -60,12 +60,11 @@
                      
                     </div>
                     <div class="flex items-center gap-5 bg-[#e6f7f1] rounded-2xl w-60 p-6">
-                        <div class="w-12 h-12 rounded-full bg-white relative">
+                        <div class="w-12 h-12 rounded-full bg-white relative items-center">
                             <i class="fa-solid fa-calendar-days absolute ml-4 mt-4"></i>
                         </div>
                         <div>
-                            <p><small>Wed , </small></p>
-                            <p class="text-2xl"><span>Jul 28 2025 </span></p>
+                            <p id="date" class="text-2xl"><span>Jul 28 2025 </span></p>
                         </div>
                     </div>
                 </div>
@@ -74,7 +73,7 @@
                         <p class="bg-white px-3 rounded inline-block mb-2 opacity-80"><small>ShopEase</small></p>
                         <h1 class="font-bold mb-2">Fix Mobile Button Issue </h1>
                         <p  class="bg-white rounded inline-block w-52 p-3 mb-2 opacity-80"><small>Debug using Chrome DevTools, check for overlapping...</small> </p>
-                        <div class="flex gap-5">
+                        <div class="flex gap-5 mt-1">
                             <div>
                                 <p><small>Deadline</small></p>
                                 <h1><small>21 March 2025</small> </h1>
@@ -87,7 +86,7 @@
                         <p class="bg-white px-3 rounded inline-block mb-2 opacity-80"><small>CloudSync</small></p>
                         <h1 class="font-bold mb-2">Add Dark Mode</h1>
                         <p  class="bg-white rounded inline-block w-52 p-3 mb-2 opacity-80"><small>Debug using Chrome DevTools, check for overlapping...</small> </p>
-                        <div class="flex gap-5">
+                        <div class="flex gap-5 mt-1">
                             <div>
                                 <p><small>Deadline</small></p>
                                 <h1><small>21 March 2025</small> </h1>
@@ -100,7 +99,7 @@
                         <p class="bg-white px-3 rounded inline-block mb-2 opacity-80"><small>SwiftPay</small></p>
                         <h1 class="font-bold mb-2">Optimize  Home page </h1>
                         <p  class="bg-white rounded inline-block w-52 p-3 mb-2 opacity-80"><small>Debug using Chrome DevTools, check for overlapping...</small> </p>
-                        <div class="flex gap-5">
+                        <div class="flex gap-5 mt-1">
                             <div>
                                 <p><small>Deadline</small></p>
                                 <h1><small>21 March 2025</small> </h1>
@@ -113,7 +112,7 @@
                         <p class="bg-white px-3 rounded inline-block mb-2 opacity-80"><small>Meta</small></p>
                         <h1 class="font-bold mb-2">Add new emoji 🤲</h1>
                         <p  class="bg-white rounded inline-block w-52 p-3 mb-2 opacity-80"><small>Debug using Chrome DevTools, check for overlapping...</small> </p>
-                        <div class="flex gap-5">
+                        <div class="flex gap-5 mt-1">
                             <div>
                                 <p><small>Deadline</small></p>
                                 <h1><small>21 March 2025</small> </h1>
@@ -126,7 +125,7 @@
                         <p class="bg-white px-3 rounded inline-block mb-2 opacity-80"><small>Google LLC</small></p>
                         <h1 class="font-bold mb-2">Integrate OpenAI API </h1>
                         <p  class="bg-white rounded inline-block w-52 p-3 mb-2 opacity-80"><small>Debug using Chrome DevTools, check for overlapping...</small> </p>
-                        <div class="flex gap-5">
+                        <div class="flex gap-5 mt-1">
                             <div>
                                 <p><small>Deadline</small></p>
                                 <h1><small>21 March 2025</small> </h1>
@@ -139,7 +138,7 @@
                         <p class="bg-white px-3 rounded inline-block mb-2 opacity-80"><small>Glassdoar</small></p>
                         <h1 class="font-bold mb-2">Improve Job searching </h1>
                         <p  class="bg-white rounded inline-block w-52 p-3 mb-2 opacity-80"><small>Debug using Chrome DevTools, check for overlapping...</small> </p>
-                        <div class="flex gap-5">
+                        <div class="flex gap-5 mt-1">
                             <div>
                                 <p><small>Deadline</small></p>
                                 <h1><small>21 March 2025</small> </h1>
@@ -152,7 +151,7 @@
             </div>
             <div>
                 <div>
-                    <div class="bg-[#e6f7f1] px-5 justify-center py-3 rounded-2xl w-52 items-center mb-6">
+                    <div class="bg-[#e6f7f1] px-5 justify-center py-3 pb-5 rounded-2xl w-52 items-center mb-6">
                         <div class="flex justify-center items-center gap-3 mb-2 ">
                             <i class="fa-solid fa-clock-rotate-left"></i>
                             <h1>Activity Log</h1>  
