Al-Hamdulillah ses, dekhi r ki kora jai

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                         </div>
                         <div>
                             <p><small>Task Assigned </small></p>
+                            <p id="count">0</p>
                             <p class="text-2xl">0<span id="Task-num">6</span></p>
                         </div>
                     </div>
