--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class=" bg-[#f3bef3]">
     <header class="ml-35 mr-35 mb-5">
         <nav>
-            <div class="flex justify-between items-center p-6 bg-[#ffffff] rounded-2xl mt-6">
+            <div class="flex justify-between items-center p-6 bg-[#ffffff] rounded-2xl mt-1 ">
                 <div class="flex gap-2 items-center">
                     <div>
                         <div class="w-14 h-14 bg-[#3751fc] rounded-r-lg relative">
@@ -38,7 +38,7 @@
             </div>
         </nav>
     </header>
-    <section class="ml-35 mr-35">
+    <section class="ml-35 mr-35 mb-1">
         <div class="bg-[#f4f7ff] rounded-2xl p-6 flex gap-6">
             <div class="w-10/12">
                 <div class="flex items-center gap-6 mb-6">
@@ -48,7 +48,6 @@
                         </div>
                         <div>
                             <p><small>Task Assigned </small></p>
-                            <p id="count">0</p>
                             <p class="text-2xl">0<span id="Task-num">6</span></p>
                         </div>
                     </div>
