--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment_5</title>
+    <!-- Font-Poppins  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <!--Tailwindcss CDN -->
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/11ab1fff1a.js" crossorigin="anonymous"></script>
-    <style>
-        
-    </style>
+    
 </head>
 <body class=" bg-[#f3bef3]">
     <header class="ml-35 mr-35 mb-2">
@@ -174,7 +176,7 @@
                             <i class="fa-solid fa-clock-rotate-left"></i>
                             <h1>Activity Log</h1>  
                         </div>
-                        <button id="clear-btn" class="bg-linear-to-r from-cyan-500 bg-[#346] p-3 rounded cursor-pointer text-white ml-7" type="reset">Clear History</button>
+                        <button id="clear-btn" class="bg-linear-to-r from-cyan-500 bg-[#346] p-3 rounded cursor-pointer text-white  ml-10" type="reset">Clear History</button>
                     </div>
                     <div id="comment-container" class="bg-[#e6f7f1] rounded-2xl w-58 h-screen">
                     </div>
