commit opor commit

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </nav>
     </header>
-    <section class="flex gap-0.5 mx-35">
+    <section class="flex gap-0.5 mx-35 mb-0.5">
 
         <section class="">
             <div class="bg-[#f4f7ff] rounded-2xl p-6 flex gap-6">
@@ -178,7 +178,7 @@
                         </div>
                         <button id="clear-btn" class="bg-linear-to-r from-cyan-500 bg-[#346] p-3 rounded cursor-pointer text-white  ml-10" type="reset">Clear History</button>
                     </div>
-                    <div id="comment-container" class="bg-[#e6f7f1] rounded-2xl w-58 h-screen">
+                    <div id="comment-container" class="bg-[#e6f7f1] rounded-2xl w-58 h-138.5">
                     </div>
                 </div>
             </div>
