font-bold korse

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         </div>
                         <div id="new-today-btn" class="flex items-center gap-5 bg-linear-to-r from-cyan-500 bg-[#346] rounded-2xl w-72 text-white p-5 cursor-pointer">
                             <img src="IMG/Group.png" alt="">
-                            <div>
+                            <div class="font-bold">
                                 <p>Discover Something </p>
                                 <p>New Today!</p> 
                             </div>
@@ -153,19 +153,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div>
-                    <div>
-                        <div class="bg-[#e6f7f1] px-5 justify-center py-3 pb-5 rounded-2xl w-52 items-center mb-6">
-                            <div class="flex justify-center items-center gap-3 mb-2 ">
-                                <i class="fa-solid fa-clock-rotate-left"></i>
-                                <h1>Activity Log</h1>  
-                            </div>
-                            <button id="clear-btn" class="bg-linear-to-r from-cyan-500 bg-[#346] p-3 rounded cursor-pointer text-white ml-7" type="reset">Clear History</button>
-                        </div>
-                        <div id="comment-container" class="bg-[#e6f7f1] rounded-2xl">
-                        </div>
-                    </div>
-                </div> -->
             </div>
         </section>
         <section>
