korlam commit ja ase kopale

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://kit.fontawesome.com/11ab1fff1a.js" crossorigin="anonymous"></script>
     
 </head>
-<body class=" bg-[#f3bef3]">
+<body class=" bg-sky-600">
     <header class="ml-35 mr-35 mb-2">
         <nav>
             <div class="flex justify-between items-center p-6 bg-[#ffffff] rounded-2xl mt-0.5">
