mone hoi eytai ses commit

--- a/index-2.html
+++ b/index-2.html
@@ -10,7 +10,7 @@
 
 </head>
 <body class="bg-[#aacef0]">
-    <header class="ml-35 mr-35 mb-3">
+    <header class="ml-35 mr-35 mb-1">
         <nav>
             <div class="flex justify-between items-center p-6 bg-[#ffffff] rounded-2xl mt-1">
                 <div class="flex gap-2 items-center">
@@ -33,9 +33,9 @@
         </nav>
     </header>
     <section class="mx-35">
-        <h1 class="text-center text-2xl font-bold mb-3">Blogs</h1>
-        <div class="bg-white p-6 rounded-2xl pr-10">
-            <h1 class=" font-bold mb-1">Question-1: What are the different ways to select an element in the DOM?</h1>
+        <h1 class="text-center text-2xl font-bold mb-1">Blogs</h1>
+        <div class="bg-white p-6 rounded-t-2xl pr-10">
+            <h1 class=" font-bold mb-0.5">Question-1: What are the different ways to select an element in the DOM?</h1>
             <p>DOM er modde bivinno doroner selector royese. jemon:</p>
             <p>1. getElementById()</p>
             <p>2.querySelector() </p>
@@ -44,8 +44,8 @@
             <p>sob theke bese use hoi <b>getElementById()</b></p>
         </div>
     </section>
-    <section class="mx-35 mt-3">
-        <div class="bg-white p-6 rounded-2xl pr-10">
+    <section class="mx-35 mt-0.5">
+        <div class="bg-white p-6  pr-10">
             <h1 class=" font-bold mb-1">Question-2: What is the difference between innerHTML, innerText, and textContent ?</h1>
             <p><b>innerHTML, innerText, and textContent</b> er modde different royese. jemon:</p>
             <p><b>innerHTML</b> Element er vitorer  HTML soho somosto content pawa jai</p>
@@ -53,21 +53,21 @@
             <p><b>textContent</b> somosto text return kore</p>
         </div>
     </section>
-    <section class="mx-35 mt-3">
-        <div class="bg-white p-6 rounded-2xl pr-10">
+    <section class="mx-35 mt-0.5">
+        <div class="bg-white p-6 pr-10">
             <h1 class=" font-bold mb-1">Question-3: What is event delegation in the DOM?</h1>
             <p><b>Event Delegation</b> holo ekti maddom ja dara parent-element er opor event-listener  set kora hoi jate child-element a kono gotona gotle ta parent-element er maddome control kora hoi. <b>DOM </b>er modde <b>Event Delegation</b> akti gorotto porno bisoi.</p>
             
     </section>
-    <section class="mx-35 mt-3">
-        <div class="bg-white p-6 rounded-2xl pr-10">
+    <section class="mx-35 mt-0.5">
+        <div class="bg-white p-6 pr-10">
             <h1 class=" font-bold mb-1">Question-4: What is event bubbling in the DOM?</h1>
             <p><b>Event Bubbling </b>holo ekti sondor concept ja ekti child-element a event ses kore tarpor tar parent-element a kaj kore tarpor tar parent-element a kaj kore ey vabe root element a chole jai.</p><br>
             <p><b>event.stopPropagation() </b>use kore bubbling bondo kora hoi.</p>
             
     </section>
-    <section class="mx-35 mt-3 mb-1 ">
-        <div class="bg-white p-6 pr-10 rounded-2xl">
+    <section class="mx-35 mt-0.5 mb-1 ">
+        <div class="bg-white p-6 pr-10 rounded-b-2xl">
             <h1 class=" font-bold mb-1">Question-5: How do you create, add, and remove elements using JavaScript?</h1>
             <p><b>DOM </b>er modde onek doroner gotona gote jemon: <b>create, add, remove</b> niche ey bisoi niye alochona kora holo.</p>
             <p><b>create: </b>createElement()</p>
