--- a/index-2.html
+++ b/index-2.html
@@ -12,7 +12,7 @@
 <body class="bg-[#aacef0]">
     <header class="ml-35 mr-35 mb-1">
         <nav>
-            <div class="flex justify-between items-center p-6 bg-[#ffffff] rounded-2xl mt-1">
+            <div class="flex justify-between items-center p-6 bg-[#ffffff] rounded-2xl mt-0.5">
                 <div class="flex gap-2 items-center">
                     <div>
                         <div class="w-14 h-14 bg-[#3751fc] rounded-r-lg relative">
@@ -66,7 +66,7 @@
             <p><b>event.stopPropagation() </b>use kore bubbling bondo kora hoi.</p>
             
     </section>
-    <section class="mx-35 mt-0.5 mb-1 ">
+    <section class="mx-35 my-0.5 ">
         <div class="bg-white p-6 pr-10 rounded-b-2xl">
             <h1 class=" font-bold mb-1">Question-5: How do you create, add, and remove elements using JavaScript?</h1>
             <p><b>DOM </b>er modde onek doroner gotona gote jemon: <b>create, add, remove</b> niche ey bisoi niye alochona kora holo.</p>
