--- a/index-2.html
+++ b/index-2.html
@@ -9,7 +9,7 @@
     
 
 </head>
-<body class="bg-[#aacef0]">
+<body class="bg-sky-600">
     <header class="ml-35 mr-35 mb-1">
         <nav>
             <div class="flex justify-between items-center p-6 bg-[#ffffff] rounded-2xl mt-0.5">
