Al-Hamdulillah final commit

--- a/index-2.html
+++ b/index-2.html
@@ -27,7 +27,7 @@
                     </div>
                     <h1 class="text-3xl">Dev <span class="font-bold">Board</span> </h1>
                 </div>
-                <button id="back-btn" class="bg-linear-to-r from-cyan-500 bg-[#346] p-3 rounded cursor-pointer text-white font-bold">Back to Desk</button>
+                <button id="back-btn" class="bg-linear-to-r from-cyan-500 bg-[#3851fa] p-3 rounded cursor-pointer text-white font-bold">Back to Desk</button>
                
             </div>
         </nav>
